# qq-group-files-sync-python

./: .gitignore  .ignore  LICENSE  README.md  build.sh  main.py  pyproject.toml
.github/workflows/: quick-check.yml  release.yml
src/: cli.py  config.py  dashboard.py  filesystem.py  group_paths.py  ignore_rules.py  local_files.py  onebot.py  plan_output.py  progress_ui.py  pusher.py  syncer.py
src/templates/: dashboard.html
